--- a/el-comilon/nbproject/private/private.properties
+++ b/el-comilon/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Joaquin\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+file.reference.ojdbc7.jar=C:\\Users\\vbape\\Downloads\\ojdbc-full\\OJDBC-Full\\ojdbc7.jar
+user.properties.file=C:\\Users\\vbape\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
