--- a/el-comilon/nbproject/project.properties
+++ b/el-comilon/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=el-comilon
-main.class=el.comilon.ElComilon
+main.class=Vista.Dashboard
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
