--- a/el-comilon/nbproject/project.properties
+++ b/el-comilon/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.ojdbc7.jar=C:\\Users\\Joaquin\\Desktop\\ojdbc-full\\OJDBC-Full\\o
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=el-comilon
-main.class=Vista.Dashboard
+main.class=Vista.Bienvenida
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
